--- a/templates/layouts.html
+++ b/templates/layouts.html
@@ -64,11 +64,13 @@
 	py-1 text-white px-24">
 		<div class="flex justify-between items-center">
 			<div class="flex space-x-3 items-center">
-				<img class="w-20 h-20" src="{{ url_for('static', filename='images/SisMoto.png') }}" alt="Image" />
-				<h4 class="text-3xl font-bold tracking-wider
-					 uppercase text-white">
-					SISDET
-				</h4>
+				<a href="/">
+					<img class="w-20 h-20" src="{{ url_for('static', filename='images/SisMoto.png') }}" alt="Image" />
+					<h4 class="text-3xl font-bold tracking-wider
+						uppercase text-white">
+						SISDET
+					</h4>
+				</a>
 			</div>
 			<div class="md:hidden block">
 				<button id="menu-open" class="hamburger">
