--- a/templates/deteccao_imagem.html
+++ b/templates/deteccao_imagem.html
@@ -24,7 +24,7 @@
 
 		<!-- Select option para escolher o modelo  -->
 		<div class="py-2 w-full text-center">
-			<label for="modelo" class="text-xl">Selecione o tipo modelo</label>
+			<label for="modelo" class="text-xl mb-2">Selecione o tipo modelo</label>
 			<select name="modelo_nome" id="modelo" class="w-full block px-3 py-2 bg-gray-100 text-lg">
 				<option value="Medium">Medium</option>
 				<option value="Small">Small</option>
