--- a/templates/relatorio.html
+++ b/templates/relatorio.html
@@ -96,7 +96,12 @@
                     </table>
                 </div>
             </div>
-        </div>                      
+        </div>   
+        <div class="flex flex-row mt-4 justify-center">
+            <p class="text-lg font-bold mx-4">Total sem capacete: {{totalSemCapacete}}</p>
+            <p class="text-lg font-bold mx-4">Total com capacete: {{totalCapacete}}</p>
+            <p class="text-lg font-bold mx-4">Total: {{total}}</p>
+        </div>
  
     </div>
 
