--- a/templates/deteccao_imagem.html
+++ b/templates/deteccao_imagem.html
@@ -44,20 +44,37 @@
 					style="height:300px; width:300px" /> -->
 	<div class="flex flex-col items-center justify-center mx-auto mt-2">
 		{% if latest_file %}
-		<div class="flex justify-between gap-x-4 
-		items-center">
-			<!-- detected image display -->
-			<div>
-				<h2 class="mb-6">Imagem Original:</h2>
-				<img id="my-image" src="{{ url_for('show_image',  filename=latest_file) }}"
-					style="height:300px; width:300px" />
-			</div>
-			<div id="deteccao">
-				<h2 class="mb-6">Imagem com as detenções: {{latest_file}}</h2>
-				<img id="my-image" src="{{ url_for('static', filename='deteccoes-imagens'+'/'+latest_file) }}"
-					style="height:300px; width:300px;" />
-			</div>
-		</div>
+			{% if file_extension == 'jpg' or file_extension == 'png'%}
+				<div class="flex justify-between gap-x-4 items-center">
+					<!-- detected image display -->
+					<div>
+						<h2 class="mb-6">Imagem Original:</h2>
+						<img id="my-image" src="{{ url_for('show_image',  filename=latest_file) }}"
+							style="height:300px; width:300px" />
+					</div>
+					<div id="deteccao">
+						<h2 class="mb-6">Imagem com as detenções: {{latest_file}}</h2>
+						<img id="my-image" src="{{ url_for('static', filename='deteccoes-imagens'+'/'+latest_file) }}"
+							style="height:300px; width:300px;" />
+					</div>
+				</div>
+			{% else %}
+				<div class="flex justify-between gap-x-4 items-center">
+					<!-- detected image display -->
+					<div>
+						<h2 class="mb-6">Vídeo Original:</h2>
+						<video style="height:300px; width:300px">
+							<source src="{{ url_for('show_video',  filename=latest_file) }}" type="video/x-msvideo">
+						</video>
+					</div>
+					<div id="deteccao">
+						<h2 class="mb-6">Vídeo com as detenções: {{latest_file}}</h2>
+						<video style="height:300px; width:300px">
+							<source src="{{ url_for('static', filename='deteccoes-videos'+'/'+latest_file) }}" type="video/x-msvideo">
+						</video>
+					</div>
+				</div>
+			{% endif %}
 
 		<div class="py-4">
 			<form action="/guardar" method="post" enctype="multipart/form-data">
