--- a/templates/relatorio.html
+++ b/templates/relatorio.html
@@ -67,7 +67,7 @@
                         <thead class="border-b font-medium bg-zinc-500 dark:border-blue-500 dark:text-blue-500" style="position: sticky; top:0; z-index: 2;">
                             <tr class="text-white">
                                 <th scope="col" class=" px-6 py-1">#</th>
-                                <th scope="col" class=" px-6 py-1">Nome da Imagem</th>
+                                <th scope="col" class=" px-6 py-1">Nome da Imagem/Vídeo</th>
                                 <th scope="col" class=" px-6 py-1">Detenções com Capacete</th>
                                 <th scope="col" class=" px-6 py-1">Detenções sem Capacete</th>
                                 <th scope="col" class=" px-6 py-1">Data</th>
@@ -97,10 +97,10 @@
                 </div>
             </div>
         </div>   
-        <div class="flex flex-row mt-4 justify-center">
-            <p class="text-lg font-bold mx-4">Total sem capacete: {{totalSemCapacete}}</p>
-            <p class="text-lg font-bold mx-4">Total com capacete: {{totalCapacete}}</p>
-            <p class="text-lg font-bold mx-4">Total: {{total}}</p>
+        <div class="flex flex-row mt-4 items-center justify-between">
+            <p class="text-lg font-bold">Total sem capacete: {{totalSemCapacete}}</p>
+            <p class="text-lg font-bold">Total com capacete: {{totalCapacete}}</p>
+            <p class="text-lg font-bold">Total: {{total}}</p>
         </div>
  
     </div>
