--- a/templates/deteccao_imagem.html
+++ b/templates/deteccao_imagem.html
@@ -15,6 +15,9 @@
 				<input type="file" accept="image/*, video/*" name="file" class="dropzone_input" id="image_ou_video"
 					required>
 			</div>
+
+			<button class="remove-button bg-red-600 text-white py-2 tracking-widest
+			rounded-md shadow-md mt-3 w-full max-w-screen-sm px-8 uppercase font-black" onclick="removeThumbnail(this.parentElement)">Remover Imagem</button> <!-- Botão de remoção -->
 			<!--    <div class="mb-5">
 		  <label for="imagem" class="block text-gray-700 text-sm mb-2">Imagem</label>
 		  <div class="dropzone rounded-md bg-gray-100">
